[gd_scene load_steps=4 format=3 uid="uid://li84anpt6tgt"]

[ext_resource type="Script" path="res://player.gd" id="1_up3n5"]
[ext_resource type="Texture2D" uid="uid://bwg5xryr8irfb" path="res://Assets/Characters/Saros.png" id="2_nmcf1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r04nj"]
size = Vector2(16, 16)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_up3n5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_r04nj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.52588e-05, -1.90735e-06)
texture = ExtResource("2_nmcf1")

[node name="RayCast_UP" type="RayCast2D" parent="."]
target_position = Vector2(2.08165e-12, -30)
collide_with_areas = true

[node name="RayCast_DOWN" type="RayCast2D" parent="."]
target_position = Vector2(2.08165e-12, 30)
collide_with_areas = true

[node name="RayCast_LEFT" type="RayCast2D" parent="."]
target_position = Vector2(-30, 2.08165e-12)
collide_with_areas = true

[node name="RayCast_RIGHT" type="RayCast2D" parent="."]
target_position = Vector2(30, 2.08165e-12)
collide_with_areas = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
